--- a/dad_final-war/web/pages/alterarPessoa.xhtml
+++ b/dad_final-war/web/pages/alterarPessoa.xhtml
@@ -2,7 +2,8 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core">
     <ui:composition template="/WEB-INF/templates/BasicTemplate.xhtml">
         <ui:define name="content">
             <h3 class="page-header"><h:outputText value="Alterar Pessoa"/></h3>
