--- a/dad_final-war/web/pages/cadastrarPessoa.xhtml
+++ b/dad_final-war/web/pages/cadastrarPessoa.xhtml
@@ -53,7 +53,7 @@
                     </div>
                     <div class="form-group col-md-4">
                         <h:commandButton id="btnConsultaCep" value="Buscar CEP" action="#{mbpessoa.consultaCep()}" class="btn btn-primary" >
-                            <f:ajax execute="btnConsultaCep" render="estado cidade descLogradouro bairro" ></f:ajax>
+                            <f:ajax execute="cep" render="estado cidade descLogradouro bairro" ></f:ajax>
                         </h:commandButton>
                         <h:message for="cep" styleClass="text text-danger" />
                     </div>
@@ -72,7 +72,7 @@
                     <div class="form-group col-md-4">
                         <h:outputLabel for="cidade" >Cidade:</h:outputLabel>
                         <h:selectOneMenu class="form-control" id="cidade" value="#{mbpessoa.cidade}"
-                                         converter="cidadeConverter" >
+                                         converter="cidadeXMLConverter" >
                             <f:selectItems value="#{mbpessoa.cidades}" var="varCidade" itemValue="#{varCidade}"
                                            itemLabel="#{varCidade.nome}" />
                         </h:selectOneMenu>
